[package]
name = "utf8-to-windows-vkc"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Translates utf8/ascii strings into Win32 keystrokes."
repository = "https://github.com/Chase-William/utf8-to-windows-vkc"
readme = "README.md"
keywords = ["win32", "virtual-key", "keystroke", "simulate", "key"]
categories = ["os", "os::windows-apis", "simulation"]
exclude = [
    ".github/workflows/*"
]

[dependencies]
phf = { version = "0.11", default-features = false, features = ["macros"] }